*.cygnus.com is going to go away in the near future. Update several references to web pages and mail addresses and remove links that will be broken soon.

--- a/htdocs/egcs-1.1/regress.html
+++ b/htdocs/egcs-1.1/regress.html
@@ -18,7 +18,7 @@ to EGCS 1.0.3a or GCC 2.8.1.
 list.  However, the "no regressions" policy does not necessarily apply
 to targets not on the official regression test list.
 
-<p>Contact <a href="mailto:law@cygnus.com">law@cygnus.com</a> directly if you
+<p>Contact law@cygnus.com directly if you
 want to help with the regression testing phase of the EGCS 1.1 release cycle.
 
 <h2>How to run the regression tests</h2>
@@ -57,8 +57,7 @@ appropriate values.
 
 
 <p>This will create "gcc.sum", "g++.sum" and "g77.sum".  You should send
-those files to the testing coordinator <a href="mailto:law@cygnus.com">
-law@cygnus.com</a>.
+those files to the testing coordinator law@cygnus.com.
 
 <p>Note that you will receive many failures from GCC 2.8.1 and EGCS 1.0.3a when
 running the gcc testsuites because those versions of the compiler do not
