--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -579,9 +579,7 @@ The egcs project now has
 
 <dt><b>February 26, 1999</b></dt>
 <dd>
-<a href="mailto:rth@cygnus.com">Richard Henderson</a> of
-Cygnus Solutions has donated a major
-rewrite of the
+Richard Henderson of Cygnus Solutions has donated a major rewrite of the
 <a href="news/cfg.html">control flow analysis pass</a> of the compiler.
 </dd>
 
