--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -165,7 +165,7 @@ implementation status is available.</p>
 
 <h2><a name="improve_the_haifa_scheduler">Improve the Haifa scheduler</a></h2> (haifa-sched.c, loop.[ch],
 unroll.c, genattrtab.c): (contact <a
-href="mailto:law@cygnus.com">law@cygnus.com</a> before starting any
+href="mailto:law@redhat.com">law@redhat.com</a> before starting any
 serious haifa work)
 
 <ul>
@@ -210,7 +210,7 @@ subcases of load/store motion).
 <p>It can probably also be used to improve the reg-stack pass of the
 compiler.
 
-<p>Contact <a href="mailto:law@cygnus.com">law@cygnus.com</a> if
+<p>Contact <a href="mailto:law@redhat.com">law@redhat.com</a> if
 you're interested in working on lazy code motion.</p>
 
 <h2><a name="miscellaneous_ideas">Miscellaneous ideas:</a></h2>
@@ -661,7 +661,7 @@ or outside of a particular loop where the variable is not used.  (The
 latter is nice because it might let the variable be in a register most
 of the time even though the loop needs all the registers.)
 
-Contact <a href="mailto:meissner@cygnus.com">meissner@cygnus.com</a>
+Contact <a href="mailto:meissner@redhat.com">meissner@redhat.com</a>
 before starting any work on live range splitting.</p>
 
 <h3><a name="detect_dead_stores_into_memory">Detect dead stores into memory?</a></h3>
@@ -673,7 +673,7 @@ address).</p>
 
 <p>This can be modeled as a partial redundancy elimination/lazy code
 motion problem.  Contact <a
-href="mailto:law@cygnus.com">law@cygnus.com</a> before working on dead
+href="mailto:law@redhat.com">law@redhat.com</a> before working on dead
 store elimination optimizations.</p>
 
 <h3><a name="loop_optimization">Loop optimization</a></h3>
@@ -738,7 +738,7 @@ order in which to generate code for subexpressions of an expression.</p>
 
 <p>Consider hoisting common code up past conditional branches or tablejumps.</p>
 
-<p>Contact <a href="mailto:law@cygnus.com">law@cygnus.com</a> before
+<p>Contact <a href="mailto:law@redhat.com">law@redhat.com</a> before
 working on code hoisting.</p>
 
 <h3><a name="trace_scheduling">Trace scheduling</a></h3>
