--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -578,7 +578,8 @@ Unsuccessful:
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00842.html">3.0</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00338.html">3.0.3</a></td>
 </tr>
 
 <tr>
