Move recent entry for k6-redhat-linux-gnu to i586-pc-linux-gnu, with other builds that were all done on the same system.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -279,9 +279,10 @@ Successful (C):
 
 <tr>
 <td>i586-pc-linux-gnu (k6)</td>
-<td>Red Hat 7.0, glibc 2.2.4</td>
+<td>Red Hat 7.0 with upgrades, glibc 2.2.4</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00214.html">3.0.2</a>;
+<a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00214.html">3.0.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00242.html">3.0.3</a>;
 Unsuccessful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00363.html">3.0 and 3.0.1</a></td>
 </tr>
@@ -477,13 +478,6 @@ Unsuccessful:
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00863.html">3.0.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00281.html">3.0.3</a></td>
-</tr>
-
-<tr>
-<td>k6-redhat-linux-gnu</td>
-<td>Red Hat 7.0 with upgrades, glibc 2.2.4</td>
-<td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00242.html">3.0.3</a></td>
 </tr>
 
 <tr>
