Complete description of the gcc mailing list.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -30,10 +30,15 @@
 <p>Open lists:</p>
 
 <ul>
-  <li><b><a href="http://gcc.gnu.org/ml/gcc/">gcc</a></b>
+  <li><p><b><a href="http://gcc.gnu.org/ml/gcc/">gcc</a></b>
   is a high volume list for general development discussions about GCC.
   Anything relevant to the development or testing of GCC and not
-  covered by other mailing lists is suitable for discussion here.</li>
+  covered by other mailing lists is suitable for discussion here.</p>
+
+  <p>All major decisions and changes, like abandoning ports or frontends,
+  should be announced and discussed here.  Ideally, this list should be
+  sufficient to follow the major trends and important news in GCC's
+  development process.</p></li>
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-help/">gcc-help</a></b>
   is a relatively high volume list for people searching for help in building
