Replace references to http://gcc.gnu.org/thanks.html by http://gcc.gnu.org/onlinedocs/gcc/Contributors.html.

--- a/htdocs/egcs-1.1/egcs-1.1.2.html
+++ b/htdocs/egcs-1.1/egcs-1.1.2.html
@@ -178,10 +178,10 @@ of the EGCS 1.1.2 distribution).  However, we also keep the most up to date
 and <a href="buildstat.html">build/test status</a> on our web page.  We
 will update those pages as new information becomes available.
 
-<p> The EGCS project would like to thank the numerous people that have
+<p>The EGCS project would like to thank the numerous people that have
 contributed new features, test results, bugfixes, etc.  This 
-<a href="http://gcc.gnu.org/thanks.html">amazing group of volunteers</a>
-is what makes EGCS successful.
+<a href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">amazing
+group of volunteers</a> is what makes EGCS successful.
 
 <p>And finally, we can't in good conscience fail to mention some
 <a href="caveats.html">caveats</a> to using EGCS 1.1.2.
