--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -20,7 +20,7 @@
 <a href="gccmission.html">Mission Statement</a><br />
 <a href="lists.html">Mailing lists</a><br />
 <a href="releases.html#timeline">Timeline</a><br />
-<a href="http://gcc.gnu.org/thanks.html">Contributors</a><br />
+<a href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">Contributors</a><br />
 <a href="steering.html">Steering Committee</a><br />
 </p>
 </td></tr>
