--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -9,8 +9,9 @@
 <h1 align="center">GCC: About</h1>
 
 <p>These pages are maintained by the GCC team, which consists of
-numerous <a href="http://gcc.gnu.org/thanks.html">volunteers and
-contributors</a>.
+numerous
+<a href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">volunteers
+and contributors</a>.
 The web effort is coordinated by Jeff Law and Gerald Pfeifer, but again,
 there are <em>lots</em> of people who contribute.</p>
 
