--- a/htdocs/gcc-3.0/index.html
+++ b/htdocs/gcc-3.0/index.html
@@ -40,8 +40,8 @@ as new information becomes available.</p>
 
 <p>The GCC developers would like to thank the numerous people that
 have contributed new features, test results, bugfixes, etc to GCC.  This
-<a href="http://gcc.gnu.org/thanks.html">amazing group of volunteers</a>
-is what makes GCC successful.</p>
+<a href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">amazing
+group of volunteers</a> is what makes GCC successful.</p>
 
 <p>And finally, we can't in good conscience fail to mention some
 <a href="caveats.html">caveats</a> to using GCC 3.0.x.</p>
