Add i386-unknown-freebsd4.4 for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -222,6 +222,13 @@ Successful (C):
 </tr>
 
 <tr>
+<td>i386-unknown-freebsd4.4</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00610.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>i486-suse-linux-gnu</td>
 <td>SuSE 7.1, glibc 2.2, kernel 2.4.x</td>
 <td>Successful:
