--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -24,8 +24,8 @@ archived mail messages that reported the builds.</p>
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00536.html">3.0.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00880.html">3.0.2</a>
-</td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00880.html">3.0.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00624.html">3.0.3</a></td>
 </tr>
 
 <tr>
@@ -85,17 +85,24 @@ archived mail messages that reported the builds.</p>
 </tr>
 
 <tr>
-<td>alphaev67-dec-osf4.0f</td>
+<td>alphaev6-dec-osf5.1</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01250.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00623.html">3.0.3</a></td>
 </tr>
 
 <tr>
 <td>alphaev6-unknown-linux-gnu</td>
-<td>Debian 2.2, glibc 2.1.3, kernel 2.2.17
+<td>Debian 2.2, glibc 2.1.3, kernel 2.2.17</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00016.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>alphaev67-dec-osf4.0f</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01250.html">3.0.3</a></td>
 </tr>
 
 <tr>
@@ -146,7 +153,8 @@ archived mail messages that reported the builds.</p>
 <td>hppa2.0w-hp-hpux11.00</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00193.html">3.0</a>;
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00193.html">3.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00621.html">3.0.3</a>;
 Successful (C):
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01290.html">3.0.3</a></td>
 </tr>
