--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -153,6 +153,13 @@ and automated testers</a> to maintain and improve quality.
 
 <dl>
 
+<dt><b>Januar 8, 2002</b></dt>
+<dd>
+ <a href="http://www.suse.com">SuSE Labs</a> developers Jan Hubicka, Bo
+ Thorsen and Andreas Jaeger have contributed a port to the AMD x86-64
+ architecture.  For more information on x86-64 see <a
+ href="http://www.x86-64.org">http://www.x86-64.org</a>.
+</dd>
 <dt><b>December 20, 2001</b></dt>
 <dd>
 GCC 3.0.3 has been released.
