--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -16,7 +16,13 @@
   <li>New Languages and Language specific improvements</li>
 
   <li>New Targets and Target Specific Improvements</li>
-
+  <ul>
+    <li><a href="http://www.suse.com">SuSE Labs</a> developers Jan
+    Hubicka, Bo Thorsen and Andreas Jaeger have contributed a port to
+    the AMD x86-64 architecture.  For more information on x86-64 see
+    <a href="http://www.x86-64.org">http://www.x86-64.org</a>.</li>
+  </ul>
+     
   <li>Documentation improvements</li>
 
   <li>Other significant improvements</li>
