--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -143,6 +143,10 @@ you may want to check out include:
       based pipeline hazard recognizer.  </li>
   <li><a href="projects/cfg.html">cfg-branch</a></li>
   <li><a href="projects/ast-optimizer.html">ast-optimizer-branch</a></li>
+  <li>x86-64-branch.  This branch contains a stable development
+  version for x86-64 development and is maintained by Jan Hubicka
+  &lt;<a href="mailto:jh@suse.cz">jh@suse.cz</a>&gt; and Andreas
+  Jaeger &lt;<a href="mailto:aj@suse.de">aj@suse.de</a>&gt;.</li>
 </ul>
 
 
