Update ftp.mirror.ac.uk entry.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -60,7 +60,7 @@ sites</a>.</p>
 <LI>Sweden: <A HREF="ftp://ftp.chl.chalmers.se/pub/egcs/">ftp.chl.chalmers.se</a>
 <LI>Taiwan: <a href="ftp://ftp1.sinica.edu.tw/pub3/CYGNUS/gcc/">ftp1.sinica.edu.tw</a>
 <li>Taiwan: <a href="ftp://ftp.nctu.edu.tw/computer-languages/C/gcc/">ftp.nctu.edu.tw</a>
-<li>UK: <a href="ftp://ftp.mirror.ac.uk/sites/sourceware.cygnus.com/pub/gcc/">ftp.mirror.ac.uk</a>
+<li>UK: <a href="ftp://ftp.mirror.ac.uk/sites/sources.redhat.com/pub/gcc/">ftp.mirror.ac.uk</a>, thanks to <a href="mailto:mirror@mirror.ac.uk">mirror@mirror.ac.uk</a>
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/sourceware.cygnus.com/pub/gcc/">sunsite.doc.ic.ac.uk</a>
 <li>US (St. Louis, releases only): <a href="ftp://mirrors.laffeycomputer.com/pub/sourceware.cygnus.com/pub/gcc/releases/">mirrors.laffeycomputer.com</a>
 </ul>
