--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -318,6 +318,20 @@ Unsuccessful:
 
 <tr>
 <td>i686-pc-cygwin</td>
+<td>Cygwin-1.3.6-6 on Windows 2000 Professional</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00752.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin-1.3.6-6 on Windows NT v4.0</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00752.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
 <td>Cygwin-1.3.6-6 on WinXP Pro</td>
 <td>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01300.html">3.0.3</a></td>
@@ -493,6 +507,13 @@ Unsuccessful:
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00863.html">3.0.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00281.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>mips-dec-ultrix4.4</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00765.html">3.0.3</a></td>
 </tr>
 
 <tr>
