--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -29,7 +29,7 @@ sites</a>.</p>
 <li>Finland: <a href="ftp://ftp.funet.fi/pub/mirrors/sourceware.cygnus.com/pub/gcc/">ftp.funet.fi</a>
 <li>France (releases only, no snapshots): <a href="ftp://ftp.ilog.fr/pub/Mirrors/gcc/">ftp.ilog.fr</a>
 <li>France (releases only, no snapshots): <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
-<li>France (Brittany, releases only, no snapshots): <a href="ftp://ftp.irisa.fr/pub/mirrors/egcs.cygwin.com/gcc/">ftp.irisa.fr</a>
+<li>France (Brittany): <a href="ftp://ftp.irisa.fr/pub/mirrors/gcc.gnu.org/gcc/">ftp.irisa.fr</a>
 <li>France (Versailles): <a href="ftp://ftp.uvsq.fr/pub/egcs/">ftp.uvsq.fr</a>
 <li>France: <a href="ftp://ftp.grolier.fr/pub/egcs/">ftp.grolier.fr</a>
 <LI>Germany (Berlin): <A HREF="ftp://ftp.fu-berlin.de/unix/languages/egcs/">ftp.fu-berlin.de</A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!
