--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -46,9 +46,9 @@ before any other arguments).</p>
 a password; reply with the empty string.</p>
 
 <p>Issue the command 
-<blockquote><code>cvs -z 9 co gcc</code></blockquote>
+<blockquote><p><code>cvs -z 9 co gcc</code></p></blockquote>
 to check out the compiler sources, respectively
-<blockquote><code>cvs -z 9 co wwwdocs</code></blockquote>
+<blockquote><p><code>cvs -z 9 co wwwdocs</code></p></blockquote>
 to check out our web pages.
 
 <p>Once you've got the repository checked out, <code>cvs update</code>
@@ -110,7 +110,7 @@ or the generator files, it is safe to delete the offending file, then run
 <p> You can check out the latest version of the GCC 3.0 release
 branch with the following command:
 
-<blockquote><code>cvs -z 9 co -rgcc-3_0-branch gcc</code></blockquote>
+<blockquote><p><code>cvs -z 9 co -rgcc-3_0-branch gcc</code></p></blockquote>
 
 <p>By changing the <code>-r</code> argument above you can check out
 particular releases or snapshots or the latest snapshot.  Other tags/branches
