Add a link to the ongoing PDP-10 port. By Lars Brinkhoff <lars.spam@nocrew.org>.

--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -31,6 +31,10 @@ port</a></h2>
 as well as 32 and 64-bits floats. It uses ELF32 for object files and
 DWARF-2 for debugging information.</p>
 
+<h2><a href="http://pdp10.nocrew.org/gcc/">PDP-10 port</a></h2>
+<p>This is an experimental port of GCC to the DEC PDP-10
+architecture.</p>
+
 
 <h2><a name="libgxx"></a><a href="http://people.redhat.com/manfredh/libgxx/">Libg++</a></h2>
 
