--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -475,6 +475,13 @@ Unsuccessful:
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>SuSE 7.1, glibc 2.2, kernel 2.4.16</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00878.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>SuSE 7.2, glibc 2.2, kernel 2.4.4-4GB</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-10/msg01481.html">3.0.2</a></td>
@@ -587,6 +594,13 @@ Unsuccessful:
 <td>Debian</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01349.html">3.0</a></td>
+</tr>
+
+<tr>
+<td>sparc-linux-gnu</td>
+<td>No particular distribution, glibc 2.2.4, kernel 2.4.18-pre1</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00905.html">3.0.3</a></td>
 </tr>
 
 <tr>
