--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -318,6 +318,13 @@ Unsuccessful:
 
 <tr>
 <td>i686-pc-cygwin</td>
+<td>Cygwin-1.3.5-3 on Windows XP Professional</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00946.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
 <td>Cygwin-1.3.6-6 on Windows 2000 Professional</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00752.html">3.0.3</a></td>
