--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -115,11 +115,12 @@ existing release.</p>
          PostScript</a>)</li>
   <li><a href="http://gcc.gnu.org/onlinedocs/g77/">G77 Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/g77.ps.gz">also in
-         PostScript</a>)</li>
+         PostScript</a>)
   <ul> 
      <li><a href="http://gcc.gnu.org/onlinedocs/g77_news.html">G77 News</a></li>
      <li><a href="http://gcc.gnu.org/onlinedocs/g77_bugs.html">G77 Bugs</a></li>
   </ul>
+         </li>
   <li><a href="http://gcc.gnu.org/onlinedocs/gcj/">GCJ Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gcj.ps.gz">also in
          PostScript</a>)</li>
