2002-01-14  Alexandre Petit-Bianco  <apbianco@redhat.com>
	* done.html (XWT): Fixed typo.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -28,7 +28,7 @@
       </tr>
       <!-- XWT -->
       <tr valign=top>
-        <td><B>XTW</B></td>
+        <td><B>XWT</B></td>
 
         <td>XWT is the XML Windowing Toolkit. It lets you write remote
         applications -- applications that run on a server, yet can
