Update ACE information

--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -215,11 +215,11 @@ different programming languages.</p>
     <td>2.3.0
     <td><a href="ftp://ftp.trolltech.com/qt/source/qt-x11-2.3.0.tar.gz">
         qt-x11-2.3.0.tar.gz</a>
-<tr><td><a href="">ACE</a>
+<tr><td><a href="http://www.cs.wustl.edu/~schmidt/ACE.html">ACE</a>
     <td>C++
-    <td>5.1.17
-    <td><a href="">
-        ?</a>
+    <td>5.2
+    <td><a href="http://deuce.doc.wustl.edu/Download.html">
+        ACE (download)</a>
 <tr><td><a href="http://www.netlib.org/lapack/index.html">LAPACK</a>
     <td>Fortran
     <td>3.0
