--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -391,6 +391,13 @@ Unsuccessful:
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 6.2, glibc 2.1.3, kernel 2.2.16</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg01054.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.1</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a></td>
